--- a/index.html
+++ b/index.html
@@ -1,36 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>My Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- First Section -->
     <section id="first">
-        <div class="first container">
-            <div>
-                <h1>Hello, <div></div></h1>
-                <h1>My Name is <div></div></h1>
-                <h1>Jernice <div></div></h1>
-                <a href="#" type="button" class="cta">Portfolio</a>
-            </div>
+      <div class="first container">
+        <div>
+          <h1>
+            Hello,
+            <div></div>
+          </h1>
+          <h1>
+            My Name is
+            <div></div>
+          </h1>
+          <h1>
+            Jernice
+            <div></div>
+          </h1>
+          <a href="#" type="button" class="cta">Portfolio</a>
         </div>
+      </div>
     </section>
     <!-- End First Section -->
 
     <!-- Middle Section -->
     <section id="middle">
-        <div class="middle container">
-            <div class="middle-top"><h1></h1>
-</div>
-    <div class="middle-bottom"></div>
+      <div class="middle container">
+        <div class="middle-top">
+          <h1 class="section-title">Serv<span>i</span>ces</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro,
+            dolorem officia non obcaecati neque delectus dolorum dolore nobis!
+            Labore eos odio quos quia doloribus deleniti! At deleniti eius
+            maiores aut!
+          </p>
         </div>
-
-
+        <div class="middle-bottom">
+          <div class="middle-item">
+            <div class="icon">
+              <img src="./img/icons8-no-fuchsia-os-48.png" alt="broken" />
+            </div>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              impedit rerum corrupti, vitae sed ullam recusandae iure eaque quis
+              doloremque dicta dignissimos tempore ratione tempora reiciendis
+              eligendi voluptatum id minus.
+            </p>
+          </div>
+          <div class="middle-item">
+            <div class="icon">
+              <img src="./img/icons8-no-fuchsia-os-48.png" alt="broken" />
+            </div>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              impedit rerum corrupti, vitae sed ullam recusandae iure eaque quis
+              doloremque dicta dignissimos tempore ratione tempora reiciendis
+              eligendi voluptatum id minus.
+            </p>
+          </div>
+          <div class="middle-item">
+            <div class="icon">
+              <img src="./img/icons8-no-fuchsia-os-48.png" alt="broken" />
+            </div>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              impedit rerum corrupti, vitae sed ullam recusandae iure eaque quis
+              doloremque dicta dignissimos tempore ratione tempora reiciendis
+              eligendi voluptatum id minus.
+            </p>
+          </div>
+          <div class="middle-item">
+            <div class="icon">
+              <img src="./img/icons8-no-fuchsia-os-48.png" alt="broken" />
+            </div>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
+              impedit rerum corrupti, vitae sed ullam recusandae iure eaque quis
+              doloremque dicta dignissimos tempore ratione tempora reiciendis
+              eligendi voluptatum id minus.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
-     <!-- End Middle Section -->
-</body>
+    <!-- End Middle Section -->
+  </body>
 </html>
