--- a/index.html
+++ b/index.html
@@ -95,5 +95,74 @@
       </div>
     </section>
     <!-- End Middle Section -->
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <div class="projects container">
+        <div class="projects-header">
+          <h1 class="section-title">Proj<span>e</span>cts</h1>
+        </div>
+        <div class="all-projects">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 1</h1>
+              <h2> Date/Project Description</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+              <div class="project-img">
+              <img src="./img/code-projects.png" alt="broken image" 
+            </div>
+          
+            <div class="project-item">
+              <div class="project-info">
+                <h1>Project 2</h1>
+                <h2> Date/Project Description</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+                <div class="project-img">
+                <img src="./img/code-projects.png" alt="broken image" 
+              </div>
+
+              <div class="project-item">
+                <div class="project-info">
+                  <h1>Project 3</h1>
+                  <h2> Date/Project Description</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+                  <div class="project-img">
+                  <img src="./img/code-projects.png" alt="broken image" 
+                </div>
+
+                <div class="project-item">
+                  <div class="project-info">
+                    <h1>Project 4</h1>
+                    <h2> Date/Project Description</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+                    <div class="project-img">
+                    <img src="./img/code-projects.png" alt="broken image" 
+                  </div>
+
+                  <div class="project-item">
+                    <div class="project-info">
+                      <h1>Project 5</h1>
+                      <h2> Date/Project Description</h2>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+                      <div class="project-img">
+                      <img src="./img/code-projects.png" alt="broken image" 
+                    </div>
+
+                    <div class="project-item">
+                      <div class="project-info">
+                        <h1>Project 6</h1>
+                        <h2> Date/Project Description</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dignissimos ea tempora unde, animi cumque mollitia delectus quae est, ipsa asperiores voluptate voluptas quisquam iste adipisci laborum explicabo harum molestias.</p>
+                        <div class="project-img">
+                        <img src="./img/code-projects.png" alt="broken image" 
+                      </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+  
+    <!-- End Projects Section -->
+
   </body>
 </html>
